--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bridges Inspection</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
@@ -41,17 +41,17 @@
 
             <div class="mySlides">
                 <div class="numbertext">1 / 3</div>
-                <img src="/images/bridge_inspection_1.jpg" style="width:100%">
+                <img src="./images/bridge_inspection_1.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">2 / 3</div>
-                <img src="/images/bridge_inspection_2.jpg" style="width:100%">
+                <img src="./images/bridge_inspection_2.jpg" style="width:100%">
             </div>
 
             <div class="mySlides">
                 <div class="numbertext">3 / 3</div>
-                <img src="/images/bridge_inspection_3.jpg" style="width:100%">
+                <img src="./images/bridge_inspection_3.jpg" style="width:100%">
             </div>
 
             <!-- Navigation arrows -->
@@ -65,15 +65,15 @@
 
             <!-- Thumbnails -->
             <div class="column">
-                <img class="demo" src="/images/bridge_inspection_1.jpg" onclick="currentSlide(1)" alt="Bridge Inspection 1">
+                <img class="demo" src="./images/bridge_inspection_1.jpg" onclick="currentSlide(1)" alt="Bridge Inspection 1">
             </div>
 
             <div class="column">
-                <img class="demo" src="/images/bridge_inspection_2.jpg" onclick="currentSlide(2)" alt="Bridge Inspection 2">
+                <img class="demo" src="./images/bridge_inspection_2.jpg" onclick="currentSlide(2)" alt="Bridge Inspection 2">
             </div>
 
             <div class="column">
-                <img class="demo" src="/images/bridge_inspection_3.jpg" onclick="currentSlide(3)" alt="Bridge Inspection 3">
+                <img class="demo" src="./images/bridge_inspection_3.jpg" onclick="currentSlide(3)" alt="Bridge Inspection 3">
             </div>
 
         </div>
@@ -102,7 +102,7 @@
 </footer>
 
 <!--Script patch-->
-<script src="/js/one_page_website.js"></script>
+<script src="./js/one_page_website.js"></script>
 
 </body>
 </html>
