--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <h2>Gallery</h2>
     <div class="row">
         <div class="column">
-            <img src="/images/bridge_inspection_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" alt="Bridge Inspection 1">
+            <img src="./images/bridge_inspection_1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow" alt="Bridge Inspection 1">
         </div>
         <div class="column">
-            <img src="/images/bridge_inspection_2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" alt="Bridge Inspection 2">
+            <img src="./images/bridge_inspection_2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow" alt="Bridge Inspection 2">
         </div>
         <div class="column">
-            <img src="/images/bridge_inspection_3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" alt="Bridge Inspection 3">
+            <img src="./images/bridge_inspection_3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow" alt="Bridge Inspection 3">
         </div>
     </div>
 
