--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </footer>
 
 <!--Script patch-->
-<script src="./js/one_page_website.js"></script>
+<script src="./JS/one_page_website.js"></script>
 
 </body>
 </html>
